<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Chaînes de caractères -->
    <string name="app_name">myBeer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label">Welcome on myBeer!</string>
    <string name="apiKey">AIzaSyAXnCUsDU3FFH2oPMQzXLW3qT04DbH6Qe0</string>
    <string name="splash_description">Splashscreen</string>
    <string name="textSplashScreen">myBeer</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="nomQuestion">Nom ?</string>
    <string name="typeQuestion">Type ?</string>
    <string name="prixQuestion">Prix ?</string>
    <string name="degreeAlcoolQuestion">% Alcool ?</string>
    <string name="adresseQuestion">Adresse ?</string>
    <string name="ajouterUneBiere">Ajouter une bière</string>
    <string name="ajouterUneFiche">Vous en êtes le créateur, dites nous ce que vous en pensez !</string>
    <string name="ajouterUnBar">Ajouter un bar</string>
    <string name="bar">Bar</string>
    <string name="prix">Prix</string>
    <string name="biere">Bière</string>
    <string name="adresse">Adresse</string>
    <string name="titre1">Titre1</string>
    <string name="fiche">Fiche</string>
    <string name="avis">Avis</string>
    <string name="smallText">Small Text</string>
    <string name="type">Type</string>
    
    <!--  Couleurs -->
    <color name="coolGray">#3A424D</color>
    <color name="White">#FFFFFF</color>
    <color name="vertCool">#59B477</color>
    <color name="jauneCool">#F7D349</color>
    <color name="sweetBlue">#E8EDF3</color>

</resources>
