<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nameBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/coolGray"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/ajouterUnBar"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/addinput"
            android:gravity="center_horizontal"
            android:hint="@string/nomQuestion"
            android:padding="3dp"
            android:textColor="@color/coolGray" />

        <EditText
            android:id="@+id/adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/addinput"
            android:gravity="center_horizontal"
            android:hint="@string/adresseQuestion"
            android:padding="3dp"
            android:textColor="@color/coolGray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/enregistrer"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/vertCool"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="enregistrer"
            android:text="@string/enregistrer"
            android:textColor="@color/White" />

    </LinearLayout>

</LinearLayout>